; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_add_int_key.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_add_int_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%llx\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_add_int_key(i32* %0, i64 %1, i64 %2, i64 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca [20 x i8], align 16
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32* %4, i32** %10, align 8
  %12 = getelementptr inbounds [20 x i8], [20 x i8]* %11, i64 0, i64 0
  %13 = load i64, i64* %8, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @snprintf(i8* %12, i32 20, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32*, i32** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = getelementptr inbounds [20 x i8], [20 x i8]* %11, i64 0, i64 0
  %19 = load i32*, i32** %10, align 8
  %20 = call i32 @zap_add(i32* %16, i64 %17, i8* %18, i32 8, i32 1, i64* %9, i32* %19)
  ret i32 %20
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @zap_add(i32*, i64, i8*, i32, i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
